1.2.4p4:
    Checks & Agents:
    * 0932 FIX: prediction: fixed bug where predicted levels were not recalculated


1.2.4p3:
    Core & Setup:
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0889 FIX: logwatch: fix case where rule wouldn't be applied...
    * 0832 FIX: solaris_mem: fixed invalid calculation of total swap...
    * 0154 FIX: zfsget: Fixed inventory of filesystems
    * 0155 FIX: mssql_counters: harded check agains odd agent output
    * 0910 FIX: brocade.power: fixed an error where the check reports an UNKNOWN on power supply failure...

    Multisite:
    * 0912 FIX: Multisite Views: Fixed bug where custom views could not get deleted
    * 0923 FIX: json export: fixed bug not stripping html tags from output

    WATO:
    * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
    * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...

    Notifications:
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...

    BI:
    * 0882 FIX: check_bi_local.py: fix crash in case of non-ascii characters...

    Reporting & Availability:
    * 0890 FIX: Fix availability computation for hosts...
    * 0891 FIX: Fix HTML encoding of tootip in inline timeline of availability

    Event Console:
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...


1.2.4p2:
    Core & Setup:
    * 0785 FIX: Availability: fixed memory leak in table statehist...

    Checks & Agents:
    * 0746 zfsget: fixed problem with agent output of check_mk_agent.solaris...

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...


1.2.4p1:
    Core & Setup:
    * 0282 FIX: TIMEPERIOD TRANSITION messages no longer cut at 64 bytes...